Fix z-index of about-me section. Change bg color of selected text

--- a/src/scss/util/_config.scss
+++ b/src/scss/util/_config.scss
@@ -32,7 +32,7 @@ body {
 
 html,
 body {
-  overflow-x: clip; /* Prevents layout shifts */
+  overflow-x: clip;
   height: 100%;
 }
 
@@ -156,6 +156,15 @@ p,
 
 li {
   font-size: clamp(1rem, 2.5vw, 1.5rem);
+}
+
+::selection {
+  background-color: var(--accent);
+  color: var(--background);
+}
+
+footer ::selection {
+  background-color: var(--secondary);
 }
 
 /* BUTTONS */
